 /* $Id: changelog,v 1.818 2000-03-18 21:17:55 mike Exp $ */

 2000-03-18: Michal Necasek <mike@mendelu.cz>
        - DDRAW: Fixed messed up DPA callback calling convention
                 Added some transparent blit code which was
                 mysteriously missing

 2000-03-18: Edgar Buerkle <Edgar.Buerkle@gmx.net>
        - MSVCRT: Implemented _EH_prolog

 2000-03-18: Christoph Bratschi <cbratschi@datacomm.ch>
        - USER32: merged with Corel WINE 20000317
                  added GCL_HICONSM support
                  fixed messagebox with no icon
        - COMCTL32: merged with Corel WINE 20000317 + bug fixes

 2000-03-18: Sander van Leeuwen <sandervl@xs4all.nl>
        - ODINCRT: Added FS wrapper for _fdopen
                   (fixes crash at exit in Professional MineSweeper when
                    selection About Odin from the system menu)

 2000-03-17: Christoph Bratschi <cbratschi@datacomm.ch>
        - COMCTL32: fixed trackbar buddy alignment
                    added useful internal tooltip styles

 2000-03-17: Sander van Leeuwen <sandervl@xs4all.nl>
        - WSOCK32: Semaphore protection for relay slot alloc/free
                   Fixed bug in WSAAsyncSelect.  Allow more than one
                   async call per window for RelayAlloc call. If it's not
                   alloced, pmwsock will return an error. Previously it was
                   overwriting slots for other async calls. (WSAAsyncGetHostName
                   in RealPlayer 7)
        - KERNEL32: Fixed handle creation for thread 0.

 2000-03-16: knut st. osmundsen <knut.stange.osmundse@pmsc.no>
    - TOOLS\FASTDEP:
            Speed optimizations: using AVL trees, include dir caching,
                dependencies stored in AVL tree until all files has been
                processes, buffered write.
            Cyclic dependency check.
            All files but the objectfiles now should have fully qualified paths.

    - INCLUDE\PDWIN32.TOOLS: